--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Available Books</title>
 </head>
 <body>
-
+    <div th:each="book : ${books}">
+        <h1 th:text="${book.id_book}"></h1>
+        <h1 th:text="${book.book_name}"></h1>
+        <h1 th:text="${book.quantity}"></h1>
+        <h1 th:text="${book.description}"></h1>
+    </div>
 </body>
 </html>
