--- a/src/main/resources/static/style_createacc.css
+++ b/src/main/resources/static/style_createacc.css
@@ -18,7 +18,7 @@ h1{
     font-family: "Book Antiqua", serif ;
     font-size: 40px;
 }
-#password, #confirm, #email{
+#password, #confirm, #username{
     padding-bottom: 8px;
     padding-top: 8px;
     padding-left: 5px;
